<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.SettingFragment_Ex">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 最上部：apkファイル置き場を開くボタン -->
        <TextView
            android:id="@+id/currentVersionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/ver0_0_0" />

        <Button
            android:id="@+id/checkUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="70dp"
            android:text="@string/check_version" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/optimize_battery"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/moveBatterySaverSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="90dp"
            android:text="@string/hyouji" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="10dp"
            android:text="@string/sleep" />

        <!-- 6段目：電池最適化の設定画面を表示 -->
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/silent"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/moveNotificationPolicySettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="220dp"
            android:text="@string/hyouji" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="10dp"
            android:text="@string/silent2" />

        </RelativeLayout>
</ScrollView>

