<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.SettingFragment">

    <!-- TODO: Update blank fragment layout -->

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/volume"
        android:indeterminate="false"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/noteSwitch"
        android:layout_alignStart="@+id/noteSwitch"
        android:layout_alignRight="@+id/noteSwitch"
        android:layout_alignEnd="@+id/noteSwitch" />

    <Button
        android:id="@+id/moveSettings"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/volume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/tosetting" />

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_mode"
        android:id="@+id/noteSwitch"
        android:layout_marginTop="25dp"
        android:checked="false"
        android:textSize="25sp"
        android:layout_below="@+id/saveSwitch"
        android:layout_alignStart="@+id/saveSwitch" />

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ACC_mode"
        android:id="@+id/saveSwitch"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volume"
        android:id="@+id/textView"
        android:layout_marginTop="24dp"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_below="@+id/noteSwitch"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_id_text"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/sp_id"
        android:layout_alignBottom="@+id/sp_id"
        android:layout_toStartOf="@+id/isExistService" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/sp_id"
        android:layout_below="@+id/ip_address"
        android:layout_alignStart="@+id/ip_address"
        android:inputType="number" />

    <TextView
        android:text="@string/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ip_address_text"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/ip_address"
        android:layout_alignBottom="@+id/ip_address"
        android:layout_toStartOf="@+id/moveSettings" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/ip_address"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/moveSettings"
        android:layout_toEndOf="@+id/ip_address_text"
        android:digits="0123456789."
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/run"
        android:id="@+id/isExistService"
        android:layout_marginBottom="31dp"
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/sp_id"
        android:layout_alignStart="@+id/sp_id"
        android:id="@+id/port_num"
        android:inputType="number" />

    <TextView
        android:text="@string/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/port_num"
        android:layout_alignBottom="@+id/port_num"
        android:layout_alignStart="@+id/ip_address_text" />


    <!-- s 追加ここから -->
    <!-- ny 一旦コメントアウト　-->

    <TextView
        android:id="@+id/togglePCNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-84dp"
        android:layout_marginLeft="-84dp"
        android:layout_marginBottom="46dp"
        android:layout_toEndOf="@+id/togglePC"
        android:layout_toRightOf="@+id/togglePC"
        android:text="@string/pc_n"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/toggleSDNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-72dp"
        android:layout_marginRight="-72dp"
        android:layout_marginBottom="52dp"
        android:layout_toStartOf="@+id/toggleSD"
        android:layout_toLeftOf="@+id/toggleSD"
        android:text="@string/sd"
        android:textSize="12sp" />

    <ToggleButton
        android:id="@+id/togglePC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/pc" />

    <ToggleButton
        android:id="@+id/toggleSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/sd_button" />

    <!-- s 追加ここまで -->

</RelativeLayout>
